[gd_scene load_steps=60 format=2]

[ext_resource path="res://Assets/Sound/toot.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Character Art/Fall (32x32).png" type="Texture2D" id=3]
[ext_resource path="res://Assets/Character Art/Double Jump (32x32).png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Character Art/Jump (32x32).png" type="Texture2D" id=5]
[ext_resource path="res://Assets/Character Art/Run (32x32).png" type="Texture2D" id=6]
[ext_resource path="res://Assets/Character Art/Idle (32x32).png" type="Texture2D" id=7]
[ext_resource path="res://Characters/Player.gd" type="Script" id=8]
[ext_resource path="res://Characters/StateLabel.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ) ],
"loop": true,
"name": "double_jump",
"speed": 20.0
}, {
"frames": [ SubResource( 94 ) ],
"loop": true,
"name": "fall",
"speed": 20.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 95 ) ],
"loop": true,
"name": "jump",
"speed": 20.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=64]
size = Vector2( 7, 10.5 )

[sub_resource type="Animation" id=59]
resource_name = "double_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "double_jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/double_jump/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.3 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=55]
resource_name = "fall"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "fall" ]
}

[sub_resource type="Animation" id=46]
resource_name = "hit"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "hit" ]
}

[sub_resource type="Animation" id=47]
resource_name = "idle"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=48]
resource_name = "jump"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "jump" ]
}

[sub_resource type="Animation" id=49]
resource_name = "run"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "run" ]
}

[sub_resource type="Animation" id=60]
resource_name = "wall_jump"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ "wall_jump" ]
}

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "double_jump"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "jump"

[sub_resource type="AnimationNodeOneShot" id=62]
fadein_time = 0.0
fadeout_time = 0.0

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "run"

[sub_resource type="AnimationNodeBlendSpace1D" id=50]
blend_point_0/node = SubResource( 52 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 53 )
blend_point_1/pos = 0.9
blend_point_2/node = SubResource( 54 )
blend_point_2/pos = -0.9

[sub_resource type="AnimationNodeBlend3" id=57]

[sub_resource type="AnimationNodeBlendTree" id=51]
graph_offset = Vector2( -516.695, -73.6343 )
nodes/Animation/node = SubResource( 56 )
nodes/Animation/position = Vector2( -200, -20 )
"nodes/Animation 2/node" = SubResource( 58 )
"nodes/Animation 2/position" = Vector2( -200, 240 )
"nodes/Animation 3/node" = SubResource( 61 )
"nodes/Animation 3/position" = Vector2( 140, 240 )
nodes/double_jump/node = SubResource( 62 )
nodes/double_jump/position = Vector2( 340, 20 )
nodes/output/position = Vector2( 580, 40 )
nodes/x_sign/node = SubResource( 50 )
nodes/x_sign/position = Vector2( -220, 100 )
nodes/y_sign/node = SubResource( 57 )
nodes/y_sign/position = Vector2( 120, 20 )
node_connections = [ "output", 0, "double_jump", "double_jump", 0, "y_sign", "double_jump", 1, "Animation 3", "y_sign", 0, "Animation", "y_sign", 1, "x_sign", "y_sign", 2, "Animation 2" ]

[sub_resource type="RectangleShape2D" id=63]
size = Vector2( 8, 1 )

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource( 8 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( 44 )
animation = "idle"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 64 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/double_jump = SubResource( 59 )
anims/fall = SubResource( 55 )
anims/hit = SubResource( 46 )
anims/idle = SubResource( 47 )
anims/jump = SubResource( 48 )
anims/run = SubResource( 49 )
anims/wall_jump = SubResource( 60 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 51 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/double_jump/active = false
parameters/x_sign/blend_position = 0
parameters/y_sign/blend_amount = 0.0

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = -13.0
text = "none"
align = 1
script = ExtResource( 9 )

[node name="JumpHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHitbox"]
position = Vector2( 0, 15 )
shape = SubResource( 63 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="change_state" from="." to="StateLabel" method="_on_Player_change_state"]
[connection signal="area_shape_entered" from="JumpHitbox" to="." method="_on_JumpHitbox_area_shape_entered"]
